добавил страницу product

--- a/src/modules/components/restaurant-card.hbs
+++ b/src/modules/components/restaurant-card.hbs
@@ -12,9 +12,7 @@
       <div class="restaurant__card-footer">
         <em class="restaurant__card-price"> 350 ₽ </em>
         <div class="restaurant__card-button">
-          <button class="button" data-modal-target="#modal-product">
-            подробнее
-          </button>
+          <a href="#" class="button"> подробнее </a>
         </div>
       </div>
     </div>
