--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -35,6 +35,7 @@
 @import 'sections/services';
 @import 'sections/rooms';
 @import 'sections/restaurant';
+@import 'sections/product';
 
 // Themes - Темы
 @import 'themes/default';
