--- a/src/scss/themes/default.scss
+++ b/src/scss/themes/default.scss
@@ -19,6 +19,7 @@ html {
   --error: #{$error};
   --progress: #{$progress};
   --bg-main: #{$bg-main};
+  --bg-main-2: #{$bg-main-2};
   --blue: #{$blue};
   --gray-2: #{$gray-2};
   --gray-3: #{$gray-3};
