--- a/src/scss/variables/variables.scss
+++ b/src/scss/variables/variables.scss
@@ -26,6 +26,7 @@ $success: #01b574;
 $error: #e04245;
 $progress: #f2994a;
 $bg-main: #deebf4;
+$bg-main-2: #94b6cd;
 $blue: #446de1;
 $gray-2: #333;
 $gray-3: #e0e0e0;
